Endpoint integration complete
All endpoints now available, using JWST to authenticate the user, and RBAC to decide if they have access to the attempted endpoint
